fixed bug with overlapping shaddow on btn

--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ label{font-weight: normal;}
 .btn-warning, #ok {height: 37px;margin-top: -6px;}
 .time{width: 140px;}
 .calcPart, .setTimePart{margin-top: 160px;font-size: 1.5em;}
-
+.yes {z-index:9999; }
 
 .footer {
   position: fixed;
@@ -66,13 +66,13 @@ label{font-weight: normal;}
   background-color: rgba(255, 255, 255, 0.15);
   bottom: -10px;
   content: '';
-  height: 220px;
+  height: 270px;
   left: -40px;
   position: absolute;
   transform: rotate(30deg);
   -webkit-transform: rotate(15deg);
-  width: 110px;
-  z-index: 999;
+  width: 80px;
+  z-index: 1;
 }
 
 #liquid .bubble {
